--- a/packages/runtime/package.json
+++ b/packages/runtime/package.json
@@ -31,6 +31,6 @@
   "description": "The Automation Programming Language",
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "Apache-2.0",
   "homepage": "https://github.com/nicolas-zozol/imagine#readme"
 }
