feat(auth-domain): extract shared auth logic into reusable package
- Create packages/auth-domain with provider, token, OAuth types and Zod schemas
- Add isomorphic PKCE utilities (Node + Browser compatible)
- Add storage interfaces and error class hierarchy
- Update apps/auth to re-export from shared package
- Update services/auth-backend to re-export from shared package

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,8 @@
   },
   "references": [
     { "path": "./packages/kit" },
-    { "path": "./packages/engine" }
+    { "path": "./packages/engine" },
+    { "path": "./packages/auth-domain" }
   ],
   "files": [],
   "exclude": ["src"]
