--- a/apps/auth/package.json
+++ b/apps/auth/package.json
@@ -24,6 +24,7 @@
     "check:a11y": "vitest -t a11y"
   },
   "dependencies": {
+    "@massivoto/auth-domain": "*",
     "@auth0/auth0-react": "^2.11.0",
     "@hookform/resolvers": "^3.10.0",
     "@mdx-js/react": "^3.0.1",
