--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "yarn:install": "yarn install",
     "clean": "npx rimraf packages/*/dist && rimraf node_modules",
+    "clean:claude": "npx rimraf tmpclaude-*",
     "clean:install": "yarn clean && yarn install",
     "build": "tsc --build",
     "build:kit": "yarn workspace @massivoto/kit build",
