feat(auth-domain): add stateful mock OAuth session store
Add MockSessionStore interface with InMemory and LocalStorage implementations
for testing OAuth flows. Tokens use format mock:<provider>:<sessionId> with
states: valid, expired, revoked.

Includes session control endpoints in auth-backend:
- GET/POST/DELETE /mock/sessions for test automation
- Support for revoked scenario in OAuth flow

--- a/services/auth-backend/env.dist
+++ b/services/auth-backend/env.dist
@@ -1,10 +1,18 @@
+# Server configuration
 PORT=3001
 FRONTEND_ORIGIN=http://localhost:8080
 
+# Auth mode: 'real' (default) or 'mock'
+# In mock mode, OAuth credentials are optional and requests are simulated
+# Use mock mode for CI tests and frontend development
+AUTH_MODE=real
+
+# GitHub OAuth credentials (optional in mock mode)
 GITHUB_CLIENT_ID=__set_me__
 GITHUB_CLIENT_SECRET=__set_me__
 GITHUB_REDIRECT_URI=http://localhost:3001/oauth/github/callback
 
+# Google OAuth credentials (optional in mock mode)
 GOOGLE_CLIENT_ID=__set_me__
 GOOGLE_CLIENT_SECRET=__set_me__
 GOOGLE_REDIRECT_URI=http://localhost:3001/oauth/google/callback
