Refactor integrations and Topbar
Refactored four integration components (ConnectApiKeyButton, ConnectGithubButton, ConnectApiSecretButton, ConnectGoogleButton) by extracting connection logic into hooks: useApiKeyConnection, useApiSecretConnection, useGoogleAuth, useGithubAuth.

Each hook handles its own OAuth/API logic, simplifying the components and making them more maintainable.

Created oauth-helper.ts for shared helper functions.

Refactored DisconnectDialog to be reusable for all integrations and logout, supporting providerName, description, and actionLabel.

Updated Topbar: minimal design, shows login button when not connected, and avatar with logout dropdown when connected.

--- a/apps/auth/tsconfig.app.json
+++ b/apps/auth/tsconfig.app.json
@@ -2,11 +2,7 @@
   "compilerOptions": {
     "target": "ES2022",
     "useDefineForClassFields": true,
-    "lib": [
-      "ES2022",
-      "DOM",
-      "DOM.Iterable"
-    ],
+    "lib": ["ES2022", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "skipLibCheck": true,
     /* Bundler mode */
@@ -25,34 +21,15 @@
     "noFallthroughCasesInSwitch": false,
     "baseUrl": ".",
     "paths": {
-      "@/*": [
-        "./src/*"
-      ],
-      "@/components/*": [
-        "./src/components/*"
-      ],
-      "@/hooks/*": [
-        "./src/hooks/*"
-      ],
-      "@/lib/*": [
-        "./src/lib/*"
-      ],
-      "@/pages/*": [
-        "./src/pages/*"
-      ],
-      "@/styles/*": [
-        "./src/styles/*"
-      ],
-      "@/mocks/*": [
-        "./src/mocks/*"
-      ],
-      "@/tests/*": [
-        "./src/tests/*"
-      ]
+      "@/*": ["./src/*"],
+      "@/components/*": ["./src/components/*"],
+      "@/hooks/*": ["./src/hooks/*"],
+      "@/lib/*": ["./src/lib/*"],
+      "@/pages/*": ["./src/pages/*"],
+      "@/styles/*": ["./src/styles/*"],
+      "@/mocks/*": ["./src/mocks/*"],
+      "@/tests/*": ["./src/tests/*"]
     }
   },
-  "include": [
-    "src",
-    "apps/integrations/src"
-  ]
+  "include": ["src", "apps/integrations/src"]
 }
