--- a/services/auth-backend/package.json
+++ b/services/auth-backend/package.json
@@ -6,7 +6,7 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc",
-    "clean": "rm -rf dist",
+    "clean": "rimraf dist",
     "prebuild": "npm run clean",
     "dev": "tsc --watch",
     "type-check": "tsc --noEmit",
@@ -28,6 +28,7 @@
     "@types/express": "^4.17.21",
     "@types/supertest": "^6.0.3",
     "prettier": "^3.5.3",
+    "rimraf": "^6.1.2",
     "supertest": "^7.2.2",
     "typescript": "^5.8.3",
     "vite-node": "^3.1.1",
