--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ bundle.js
 # Logs
 logs
 *.log
+parser.logs.json
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
@@ -37,3 +38,4 @@ dist-ssr
 *.sln
 *.sw?
 
+nul
