--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,9 @@ parser.logs.json
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# Yarn install state (machine-specific)
+.yarn/install-state.gz
 pnpm-debug.log*
 lerna-debug.log*
 
