--- a/packages/runtime/package.json
+++ b/packages/runtime/package.json
@@ -18,7 +18,8 @@
     "@massivoto/kit": "*",
     "@modelcontextprotocol/sdk": "^1.0.0",
     "lodash.get": "^4.4.2",
-    "lodash.set": "^4.3.2"
+    "lodash.set": "^4.3.2",
+    "zod": "^3.24.0"
   },
   "devDependencies": {
     "@types/lodash.get": "^4.4.9",
