feat(applet-confirm): add demo script for manual testing

--- a/applets/confirm/package.json
+++ b/applets/confirm/package.json
@@ -23,6 +23,7 @@
     "dev": "tsc --watch",
     "type-check": "tsc --noEmit",
     "test": "vitest run",
+    "demo": "vite-node demo.ts",
     "prettier": "prettier --write \"src/**/*.ts\" \"front/src/**/*.tsx\""
   },
   "dependencies": {
