--- a/packages/kit/package.json
+++ b/packages/kit/package.json
@@ -25,6 +25,7 @@
   },
   "devDependencies": {
     "prettier": "^3.7.4",
+    "rimraf": "^6.1.2",
     "typescript": "^5.9.3",
     "vite-node": "^3.2.4",
     "vitest": "^3.2.4"
