--- a/packages/runtime/tsconfig.json
+++ b/packages/runtime/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "ES2023",
+    "target": "ES2022",
     "module": "ESNext",
     "moduleResolution": "Node",
     "resolveJsonModule": true,
@@ -17,5 +17,5 @@
   },
   "references": [{ "path": "../kit" }],
   "include": ["src"],
-  "exclude": ["dist", "node_modules", "**/*.spec.ts", "**/*.e2e.spec.ts", "src/bin"]
+  "exclude": ["dist", "node_modules", "src/bin"]
 }
