chore: portal for "@massivoto/interpreter"

--- a/packages/runtime/package.json
+++ b/packages/runtime/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@masala/parser": "^2.0.0",
+    "@massivoto/interpreter": "portal:../../../massivoto-interpreter",
     "@massivoto/kit": "*",
     "@modelcontextprotocol/sdk": "^1.0.0",
     "commander": "^14.0.2",
