chore(build): removing declaration and sourcemap options

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,9 +8,7 @@
     "skipLibCheck": true,
     "module": "ESNext",
     "composite": true,
-    "strict": true,
-    "declaration": true,
-    "declarationMap": true
+    "strict": true
   },
   "references": [
     { "path": "./packages/kit" },
