--- a/packages/runtime/integration/tsconfig.json
+++ b/packages/runtime/integration/tsconfig.json
@@ -1,13 +1,6 @@
 {
+  "extends": "../../../../tsconfig.base.json",
   "compilerOptions": {
-    "target": "ES2020",
-    "module": "ESNext",
-    "moduleResolution": "Node",
-    "resolveJsonModule": true,
-    "esModuleInterop": true,
-    "strict": true,
-    "forceConsistentCasingInFileNames": true,
-    "skipLibCheck": true,
     "outDir": "dist"
   },
   "include": ["src"]
