--- a/services/auth-backend/tsconfig.json
+++ b/services/auth-backend/tsconfig.json
@@ -1,15 +1,8 @@
 {
+  "extends": "../../../tsconfig.base.json",
   "compilerOptions": {
-    "target": "ES2022",
-    "module": "NodeNext",
-    "moduleResolution": "NodeNext",
-    "lib": ["ES2022"],
-    "strict": true,
-    "esModuleInterop": true,
-    "skipLibCheck": true,
     "outDir": "dist",
     "rootDir": "src",
-    "resolveJsonModule": true,
     "types": ["node"]
   },
   "include": ["src/**/*"]
